fixing small UI bugs

--- a/styles/sourcefetch.less
+++ b/styles/sourcefetch.less
@@ -12,12 +12,10 @@ atom-workspace atom-workspace-axis atom-pane-container atom-pane .item-views {
   background-color: @app-background-color;
   box-sizing: border-box;
   max-width: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
   .wrapper {
     border-radius: 5px;
-    // width: 300px;
-    overflow-x: scroll;
-    overflow-y: scroll;
+    overflow: auto;
     div {
       border-radius: 5px;
       padding: 2%;
