--- a/styles/sourcefetch.less
+++ b/styles/sourcefetch.less
@@ -13,6 +13,10 @@ atom-workspace atom-workspace-axis atom-pane-container atom-pane .item-views {
   box-sizing: border-box;
   max-width: 300px;
   overflow-y: auto;
+  .heading {
+    text-align: center;
+    padding: 5px;
+  }
   .wrapper {
     border-radius: 5px;
     overflow: auto;
@@ -26,7 +30,7 @@ atom-workspace atom-workspace-axis atom-pane-container atom-pane .item-views {
         border-radius: 0;
         display: inline-block;
         padding: 0;
-        height: 300px;
+        height: 305px;
       }
       .leftWrapper {
         background-color: @background-color-success;
